- using plugin v1.6.0 - added PATCH button

--- a/www/index.html
+++ b/www/index.html
@@ -9,7 +9,8 @@
     </head>
     <body>
         <button id="toggleAllCertsBtn">Toggle acceptAllCerts</button>
-        <button id="getBtn">Get Request</button>
+        <button id="getBtn">GET Request</button>
+        <button id="patchBtn">PATCH Request</button>
 
         <input id="urlInput" type="text" value="https://self-signed.badssl.com/" />
 
