--- a/www/index.html
+++ b/www/index.html
@@ -8,15 +8,12 @@
         <link rel="stylesheet" type="text/css" href="css/index.css">
     </head>
     <body>
-        <button id="toggleAllCertsBtn">Toggle acceptAllCerts</button>
-        <button id="getBtn">GET Request</button>
-        <button id="patchBtn">PATCH Request</button>
-
-        <input id="urlInput" type="text" value="https://self-signed.badssl.com/" />
-
-        <textarea rows="20" cols="50" id="resultTextarea"></textarea>
+        <h1 id="descriptionLbl">Advanced HTTP test suite</h1>
+        <textarea rows="20" cols="50" id="resultTextarea">Click next to run first test.</textarea>
+        <button id="nextBtn">Run next test</button>
 
         <script type="text/javascript" src="cordova.js"></script>
+        <script type="text/javascript" src="js/test-definitions.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
     </body>
 </html>
